// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple with Object.assign #2 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2 2`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2 3`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2 4`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign 2`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign 3`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign 4`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2 2`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2 3`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2 4`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3 2`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3 3`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3 4`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8 2`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8 3`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8 4`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9 2`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9 3`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9 4`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10 2`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10 3`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10 4`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11 2`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11 3`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11 4`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12 2`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12 3`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12 4`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #13 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13 2`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13 3`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13 4`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads 2`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads 3`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads 4`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Unsafe spread 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Unsafe spread 2`] = `"Failed to optimize React component tree for \\"App\\" due to a fatal error during evaluation: A fatal error occurred while prepacking."`;
